testsuite/tests/grammar/invalid_unparser/pick-in-list.lkt
grammar foo_grammar {
    @main_rule main_rule <- ASTList[Root]+("example" Root(or(
        pick("example" Identifier(@identifier))
        | Number(@number)
    )))
}
